fixed startup of app

--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -21,24 +21,24 @@ html, body {
 
 // Apply defaults
 
-h1 {
-    font-size: $text-h1-size;
-}
-h2 {
-    font-size: $text-h2-size;
-}
-h3 {
-    font-size: $text-h3-size;
-}
-h4 {
-    font-size: $text-h4-size;
-}
-h5 {
-    font-size: $text-h5-size;
-}
+//h1 {
+//    font-size: $text-h1-size;
+//}
+//h2 {
+//    font-size: $text-h2-size;
+//}
+//h3 {
+//    font-size: $text-h3-size;
+//}
+//h4 {
+//    font-size: $text-h4-size;
+//}
+//h5 {
+//    font-size: $text-h5-size;
+//}
 
 .__react_component_tooltip {
-    padding: $spacing-s !important;
+    //padding: $spacing-s !important;
 
     &.show {
         opacity: 1 !important;
