--- a/client/src/components/videoslist/videoslist.scss
+++ b/client/src/components/videoslist/videoslist.scss
@@ -1,15 +1,16 @@
 .video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
+    width: calc(33% - 20px);
+    margin: 10px;
+    padding-bottom: calc(15% - 20px);
     height: 0;
+    display: inline-block;
     overflow: hidden;
 
     iframe,
     object,
     embed {
         position: absolute;
-        top: 0;
+        top: 20px;
         left: 0;
         width: 100%;
         height: 100%;
