--- a/client/src/components/videoslist/videoslist.scss
+++ b/client/src/components/videoslist/videoslist.scss
@@ -23,6 +23,12 @@
         border-radius: 4px;
         padding: 5px 10px;
         border: 0;
+        transition: all 0.2s ease;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #b1b1b1;
     }
 
     iframe,
