--- a/client/src/components/videoslist/videoslist.scss
+++ b/client/src/components/videoslist/videoslist.scss
@@ -1,3 +1,41 @@
+.videos-section-title {
+    margin: 10px;
+    font-weight: 200;
+}
+
+p {
+    margin-left: 10px;
+    color: #666;
+}
+
+hr {
+    margin: 20px;
+}
+
+form {
+    margin-left: 10px;
+    button {
+        margin-left: 5px;
+    }
+}
+
+button.black {
+    font-size: 14px;
+    margin-bottom: 0;
+    font-weight: 200;
+    color: #fff;
+    background-color: #121212;
+    border-radius: 4px;
+    padding: 5px 10px;
+    border: 0;
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+
+button.black:hover {
+    background-color: #b1b1b1;
+}
+
 .video-container {
     position: relative;
     width: calc(33% - 20px);
@@ -15,20 +53,6 @@
 
     button {
         margin-top: calc(50% + 5px);
-        font-size: 14px;
-        margin-bottom: 0;
-        font-weight: 200;
-        color: #fff;
-        background-color: #121212;
-        border-radius: 4px;
-        padding: 5px 10px;
-        border: 0;
-        transition: all 0.2s ease;
-        cursor: pointer;
-    }
-
-    button:hover {
-        background-color: #b1b1b1;
     }
 
     iframe,
