--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -2,23 +2,22 @@
 @import './variables';
 @import './mixins';
 
-html, body {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	font-family: Verdana, sans-serif;
+html,
+body {
+    width: 100%;
+    height: 100%;
+    font-family: Verdana, sans-serif;
 
-	> #root {
-		width: 100%;
-		height: 100%;
+    > #root {
+        width: 100%;
+        height: 100%;
 
-		> div {
-			width: 100%;
+        > div {
+            width: 100%;
             height: 100%;
         }
-	}
+    }
 }
-
 
 // Apply defaults
 
@@ -45,6 +44,5 @@ html, body {
         opacity: 1 !important;
     }
 }
-
 
 // Apply mixins
